# airgradient-collector

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  airgradient-collector.cabal  dev.sh  docker-compose.yml
app/: Main.hs
src/: AirGradient.hs  Config.hs  DB.hs
