cabal-version: 3.0
name:          airgradient-collector
version:       0.1.0
build-type:    Simple

executable airgradient-collector
  main-is:          Main.hs
  hs-source-dirs:   app src
  other-modules:    Config AirGradient DB
  build-depends:
      base               >= 4.19 && < 5
    , aeson              >= 2.1
    , bytestring         >= 0.11
    , http-client        >= 0.7
    , http-client-tls   >= 0.3
    , postgresql-simple  >= 0.6
    , text               >= 2.0
    , time               >= 1.12
  default-language: Haskell2010
  ghc-options:      -Wall -O2